--- a/User/.gitconfig
+++ b/User/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Archie
-	email = youkun@bilibili.com
+	name = youkun.yk
+	email = youkun.yk@alibaba-inc.com
 [alias]
 	st = status
 	co = checkout
