--- a/User/.gitconfig
+++ b/User/.gitconfig
@@ -8,6 +8,7 @@
 	br = branch
 	ft = fetch
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+	sm = submodule 
 	sf = submodule foreach --recursive
 [credential]
 	helper = store
